--- a/.github/workflows/spinup-destroy.yml
+++ b/.github/workflows/spinup-destroy.yml
@@ -10,9 +10,9 @@ env:
   AZURE_APP_PLAN: actions-ttt-deployment
   AZURE_LOCATION: '"East US"'
   ###############################################
-  ### Replace <username> with GitHub username ###
+  ### Replace <RadcliffeJt> with GitHub RadcliffeJt ###
   ###############################################
-  AZURE_WEBAPP_NAME: <username>-ttt-app
+  AZURE_WEBAPP_NAME: <RadcliffeJt>-ttt-app
 
 jobs:
   setup-up-azure-resources:
